--- a/.github/workflows/sbom-report.yml
+++ b/.github/workflows/sbom-report.yml
@@ -19,5 +19,8 @@ jobs:
          upload-artifact: false
          upload-release-assets: false
          output-file: dist/${{ github.event.repository.name }}-spdx.json
+    - uses: anchore/sbom-action/publish-sbom@v0
+      with:
+        sbom-artifact-match: ".*\\.json$"
     - name: Checking
       run: ls -la; pwd
