--- a/.github/workflows/sbom-report.yml
+++ b/.github/workflows/sbom-report.yml
@@ -11,7 +11,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-        
+
+    - name: Create dist dir
+      run: mkdir dist
+
     - name: Anchore SBOM Action
       uses: anchore/sbom-action@v0.12.0
       with:
