Update sbom-report.yml - v1

--- a/.github/workflows/sbom-report.yml
+++ b/.github/workflows/sbom-report.yml
@@ -19,7 +19,7 @@ jobs:
       uses: anchore/sbom-action@v0.12.0
       with:
          artifact-name: test-spdx.json
-         upload-artifact: false
+         # upload-artifact: false
          upload-release-assets: false
          output-file: dist/test-spdx.json
     - name: Checking
