--- a/.github/workflows/sbom-report.yml
+++ b/.github/workflows/sbom-report.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Anchore SBOM Action
       uses: anchore/sbom-action@v0.12.0
       with:
-        artifact-name: k6-${{VERSION}}-spdx.json
+        artifact-name: k6-${{ env.VERSION }}-spdx.json
         upload-release-assets: false
-        output-file: dist/k6-${{VERSION}}-spdx.json
+        output-file: dist/k6-${{ env.VERSION }}-spdx.json
     - name: Checking
       run: ls -la; pwd; ls -la dist
