--- a/.github/workflows/sbom-report.yml
+++ b/.github/workflows/sbom-report.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Create dist dir
-      run: mkdir dist
+      run: mkdir dist; cd dist
 
     - name: Anchore SBOM Action
       uses: anchore/sbom-action@v0.12.0
