--- a/.github/workflows/sbom-report.yml
+++ b/.github/workflows/sbom-report.yml
@@ -17,8 +17,10 @@ jobs:
       run: mkdir dist; cd dist
 
     - name: Anchore SBOM Action
+      continue-on-error: true
       uses: anchore/sbom-action@v0.12.0
       with:
+        invalid_failed
         artifact-name: k6-${{ env.VERSION }}-spdx.json
         upload-release-assets: false
         output-file: dist/k6-${{ env.VERSION }}-spdx.json
