--- a/.github/workflows/sbom-report.yml
+++ b/.github/workflows/sbom-report.yml
@@ -22,6 +22,6 @@ jobs:
       with:
         artifact-name: k6-${{ env.VERSION }}-spdx.json
         upload-release-assets: false1
-        output-file: dist/k6-${{ env.VERSION }}-spdx.json
+        output-file: dist1/k6-${{ env.VERSION }}-spdx.json
     - name: Checking
       run: ls -la; pwd; ls -la dist
