--- a/.github/workflows/sbom-report.yml
+++ b/.github/workflows/sbom-report.yml
@@ -24,4 +24,6 @@ jobs:
         upload-release-assets: false1
         output-file: dist1/k6-${{ env.VERSION }}-spdx.json
     - name: Checking
+      run: ls -la; pwd; ls -la dist111; exit 1
+    - name: Checking
       run: ls -la; pwd; ls -la dist
